...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="OmG-on-QGo" customClass="SearchBar" customModule="Atlas" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="searchBarCountries"/>
                                </userDefinedRuntimeAttributes>
                            </searchBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PtK-dc-FYL">
                                <rect key="frame" x="0.0" y="76" width="375" height="542"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <userDefinedRuntimeAttributes>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJR-pB-Ufg">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Favorites" id="3Ds-Bl-Php">
                                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Edit" id="FLH-Pa-fe1">
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="editModeButton"/>
                                            </userDefinedRuntimeAttributes>
                                            <connections>
                                                <action selector="barButtonEditPressed:" destination="r7d-oq-4oU" id="iGO-HR-KDC"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
