...
        updateFavoriteButton()
    }
    
    func updateFavoriteButton() {
        if ResourcesManager.shared.isFavorite(country) {
            self.navigationItem.rightBarButtonItem = UIBarButtonItem.init(image: UIImage.init(named: "icon_tab2_selected"), style: .plain, target: self, action: #selector(removeFromFavorites))
            self.navigationItem.rightBarButtonItem?.accessibilityLabel = "removeFromFavoritesButton"
        } else {
            self.navigationItem.rightBarButtonItem = UIBarButtonItem.init(image: UIImage.init(named: "icon_tab2"), style: .plain, target: self, action: #selector(addToFavorites))
            self.navigationItem.rightBarButtonItem?.accessibilityLabel = "addToFavoritesButton"
        }
    }

    func borderCountriesCount() -> Int {
        return self.dataSource!.countries?.count ?? 0
    }
...
